--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <span class="icon-bar bar2"></span>
                     <span class="icon-bar bar3"></span>
                     </button>
-                    <a href="http://www.creative-tim.com">
+                    <a href="http://kencode7.github.io">
                         <div class="logo-container">
                             <div class="logo">
                                 <img src="assets/img/mylogo2.png" alt="Kenneth Nwobi Logo">
@@ -89,8 +89,8 @@
                             <div class="description">
                                 <h2>Hello!</h2>
                                 <h5>I am Kenneth Nwobi,
-                                    <span class="txt-rotate" data-period="2000" data-rotate='[ "a developer", "a designer,", "a tutor,", "a leader,", "an innovator,"]'>
-                                    </span> <br>interested in start-ups and building creative and beautiful technology that inspire the future. curious to find out how things work makes me a solution to problems. please <a href="mailto:kencode007@gmail.com" style="color:#3d3a3a;">say Hello,</a> I can't wait to bring your idea to life</h5>
+                                    <span class="txt-rotate" style="color:#3d3a3a;" data-period="2000" data-rotate='[ "a developer,", "a designer,", "a tutor,", "a leader,", "an innovator,"]'>
+                                    </span> <br>interested in start-ups and building creative and beautiful technology that inspire the future yet to come. curiosity to find out how things work makes me a solution to problems. please <a href="mailto:kencode007@gmail.com" style="color:#3d3a3a;">say Hello,</a> I can't wait to bring your idea to life</h5>
                             </div>
                             <div class="buttons">
                                 <button class="btn btn-fill btn-neutral">
@@ -132,10 +132,10 @@
                             <div id="description-carousel" class="carousel fade" data-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="item">
-                                        <img src="assets/img/template/examples/home_33.jpg" alt="">
+                                        <img src="assets/img/greencyclers.png" alt="">
                                     </div>
                                     <div class="item active">
-                                        <img src="assets/img/template/examples/home_22.jpg" alt="">
+                                        <img src="assets/img/compusoft.png" alt="">
                                     </div>
                                     <div class="item">
                                         <img src="assets/img/template/examples/home_11.jpg" alt="">
@@ -208,7 +208,7 @@
 
 <!-- stats.js -->
 <!--<script src="js/lib/stats.js"></script>-->
-<script>
+<!--<script>
   var count_particles, stats, update;
   stats = new Stats;
   stats.setMode(0);
@@ -226,7 +226,7 @@
     requestAnimationFrame(update);
   };
   requestAnimationFrame(update);
-</script>
+</script>-->
     <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
     <script src="assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
     <script src="assets/js/bootstrap.js" type="text/javascript"></script>
